myteo/test/analyze/type_check/assignment/basic.exp
Error: Expected type `int` but found `unit`
test/analyze/type_check/assignment/basic.myte:7:6-8
 7 |   x = ();
   |       ^^